--- a/index.html
+++ b/index.html
@@ -50,56 +50,80 @@
                     <img src="right-arrow.svg" alt="logo">
                 </div>
                 <div class="buttons">
-                <button>Signup</button>
-                <button>Login</button>
+                <button class="signBtn">Signup</button>
+                <button class="loginBtn">Login</button>
                 </div>
             </div>
             <div class="spotifyPlaylists">
                 <h1>Spotify Playlists</h1>
                 <div class="cardContainer">
                     <div class="card">
-                        <img src="https://i.scdn.co/image/ab67616d00001e02d5754cde395f5c46792186c7" alt="">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
+                        <img src="https://i.scdn.co/image/ab67616d00001e02d5754cde395f5c46792186c7" alt="" >
                         <h2>Pardesiya - From "Param Sundari"</h2>
                         <p>Sachin-Jigar & Sonu Nigam</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src="https://i.scdn.co/image/ab67616d00001e021a3bf4e253476962f3fd1169" alt="">
                         <h2>MF Gabhru!</h2>
                         <p>Karan Aujla</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src="https://i.scdn.co/image/ab67616d00001e02eb0516ec1c97c3cc97f4cb61" alt="">
                         <h2>Thodi Si Daaru</h2>
                         <p>AP Dhillon</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src="https://i.scdn.co/image/ab67616d00001e0203628829456a6d3f476ce12e" alt="">
                         <h2>Aavan Jaavan (From "WAR 2")</h2>
                         <p>Pritam & Arijit Singh</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src="https://i.scdn.co/image/ab67616d00001e0225fa8e214ad888b7d291f25e" alt="">
                         <h2>Monica (From "Coolie") (Tamil)</h2>
                         <p>Anirudh Ravichander</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src="https://i.scdn.co/image/ab67616d00001e026404721c1943d5069f0805f3" alt="">
                         <h2>Aashiqui 2</h2>
                         <p>Mithoon & Ankit Tiwari</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src="https://i.scdn.co/image/ab67616d00001e02707ea5b8023ac77d31756ed4" alt="">
                         <h2>Yeh Jawaani Hai Deewani</h2>
                         <p>Pritam</p>
                     </div>
 
                     <div class="card">
+                        <div class="play">
+                            <img src="playBtn.svg" alt="play">
+                        </div>
                         <img src=https://i.scdn.co/image/ab67616d00001e02711c1639b4bc0f9978ae77a6 alt="">
                         <h2>Sanam Teri Kasam</h2>
                         <p>Himesh Reshammiya</p>
@@ -108,5 +132,6 @@
             </div>
         </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
