--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="utility.css">
-        
-        <title>Spotify</title>
+        <link rel="icon" type="image/png" href="favicon1.png" sizes="48x48">
+
     </head>
     <body>
         
@@ -50,8 +50,8 @@
                     <img src="right-arrow.svg" alt="logo">
                 </div>
                 <div class="buttons">
-                <button class="signBtn">Signup</button>
-                <button class="loginBtn">Login</button>
+                <button class="signBtn">Sign up</button>
+                <button class="loginBtn">Log in</button>
                 </div>
             </div>
             <div class="spotifyPlaylists">
@@ -128,6 +128,15 @@
                         <h2>Sanam Teri Kasam</h2>
                         <p>Himesh Reshammiya</p>
                     </div>
+                </div>
+                <div class="playbar">
+                    <div class="songInfo"></div>
+                    <div class="songButtons">
+                    <img src="prevBtn.svg" alt="player" class="invert">
+                    <img src="play.svg" alt="player" class="invert">
+                    <img src="nextBtn.svg" alt="player" class="invert">
+                    </div>
+                    <div class="songtime"></div>
                 </div>
             </div>
         </div>
